# sdk-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
rescontre/: __init__.py  client.py  errors.py
tests/: test_smoke.py
