[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rescontre"
version = "0.1.1"
description = "Clearinghouse SDK for agent-to-agent payments."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Jungyoon Lim", email = "46868943+Jungyoonlim@users.noreply.github.com" },
]
keywords = ["payments", "x402", "agents", "clearinghouse", "settlement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21"]

[project.urls]
Homepage = "https://github.com/Rescontre/facilitator"
Repository = "https://github.com/Rescontre/sdk-py"
Issues = "https://github.com/Rescontre/sdk-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["rescontre"]
